# TAER_Core

./: .env  .gitignore  README.md  TAER_Core_Compile.py  build_release.py  pyproject.toml  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release.yml  wheels.yml
TAER_Core/: main_model.py  main_presenter.py
TAER_Core/Libs/: __init__.py  config.py
TAER_Core/Views/: adcs_view.py  buffered_canvas.py  device_info_view.py  main_menubar.py  values_view.py
src/TAER_Core/: main_model.py  main_presenter.py  main_view.py
src/TAER_Core/Controllers/: __init__.py  delegates.py  interactors.py
src/TAER_Core/Libs/: dev_opal_kelly.py
src/TAER_Core/Views/: __init__.py  auxiliar_view_base.py  chip_register_view.py  histogram_view.py  main_menubar.py  select_config_dialog.py  serial_view.py
