[project]
name = "TAER_Core"
description = "Core module for TAER (Test AER based sensors)."
authors = [
    {name = "Rafael de la Rosa", email = "rdvidal@us.es"},
    {name = "Ruben Gomez Merchan", email = "rgmerchan@us.es"},
]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10.5"
dependencies = [
    "numpy==1.24.0",
    "opencv-python",
    "matplotlib<=3.10",
    "PyYAML==6.0.1",
    "wxPython==4.2.0",
    "pre-commit"
]
dynamic = ["version"]

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.sdist]
include = ["Data/"]

[tool.isort]
profile = "black"

[tool.black]
line-length = 119